<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <PreferenceCategory
        android:title="Notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="notifications_new_message"
            android:title="@string/pref_title_notifications"/>
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate"/>
        <com.bullest.goodmorning.TimePreference
            android:key="time_preference"
            android:title="@string/pref_title_time"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="About"
        android:summary="@string/pref_about_summary">

        <Preference
            android:key="@string/key_send_feedback"
            android:title="@string/pref_title_contact"
            android:summary="@string/pref_summary_contact"/>

        <!-- preference opens url in browser -->
        <Preference
            android:title="Source Code in Github"
            android:summary="https://github.com/bullest/GoodMorning">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/bullest/GoodMorning"/>
        </Preference>

        <Preference
            android:title="version"
            android:summary="1.2.0"/>
    </PreferenceCategory>
</PreferenceScreen>
